<resources>
    <string name="app_name">Suiter Hero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intro Page String Resource -->
    <string name="text_intro_page_first">Android game that makes you feel like superhero but your power is just SUIT Rock, Paper, Scissors</string>
    <string name="text_intro_page_second">Be able to play individually against robot. Destroy it!</string>
    <string name="text_intro_page_third">Invite your friend, family, or everyone to play with you!</string>
    <string name="text_title_image_intro_page_first">Suiterhero</string>
    <string name="text_title_image_intro_page_second">Against Robot</string>
    <string name="text_title_image_intro_page_third">Family Friendly Game</string>
    <string name="text_title_options_menu">Options Menu</string>
    <string name="text_game_mode">Game Mode</string>
    <string name="text_play_in_player_1_vs_player_2_mode_or_player_1_vs_robot_mode">Play in player 1 vs player 2 mode or player 1 vs robot mode</string>
    <string name="text_game_history">Game History</string>
    <string name="text_look_at_your_previous_played_game_history">Look at your previous played Game History</string>
    <string name="text_video_tutorial">Video Tutorial</string>
    <string name="text_to_watch_video_tutorial_about_how_to_play_and_the_rules">To watch video tutorial about how to play and the rules</string>
    <string name="text_about">About</string>
    <string name="text_get_to_know_the_developers_who_developer_the_application">Get to know the developers who developer the application</string>
    <string name="text_how_to_play">How to Play</string>

    <string name="text_title_insert_player_name"><![CDATA[Welcome,\nSuiterman & Suiterwoman]]></string>
    <string name="text_hint_insert_player_name">Insert Player Name</string>
    <string name="text_btn_get_started">Get Started</string>
    <string name="text_title_game_mode">Game Mode</string>
    <string name="text_pvc">Player VS Computer</string>
    <string name="text_pvp">Player VS Player</string>
    <string name="text_player_name">Name: Player Name Viewer</string>
    <string name="text_mode_pvr">Mode: Player 1 vs Robot</string>
    <string name="text_mode_pvp">Mode: Player 1 vs Player 2</string>
    <string name="text_enter_player_2">Enter Player 2</string>
    <string name="text_description_enter_player_2">Add a new player 2 or select\nwho was previously added</string>
    <string name="text_hint_enter_player_2">Enter or Select Player 2 Name</string>
    <string name="btn_text_start_game">Start Game</string>

    <string name="text_format_player1">Player 1: %s</string>
    <string name="text_format_player2">Player 2: %s</string>
    <string name="text_format_power">Power: %s</string>
    <string name="text_title_game_history">Game History</string>
    <string name="text_btn_game_result">Game Result</string>
    <string name="text_no_data_available">No Data Available</string>
    <string name="text_format_player_name_win">%s %s</string>


    <string name="text_format_player_name">Name: %s</string>

    <string name="text_suit_game_in_rock_paper_and_scissor">Suit game in rock, paper and scissor</string>
    <string name="text_our_awesome_team">Our Awesome Team</string>
    <string name="text_player_one">Player One</string>
    <string name="text_com">COM</string>
    <string name="text_vs">VS</string>
    <string name="text_suiterhero">Suiterhero</string>
    <string name="text_play_again">Play Again</string>
    <string name="text_back_to_option_menu">Back To Game Mode</string>
    <string name="text_you_win">%s Win!</string>
    <string name="text_you_lose">%s Lose!</string>
    <string name="text_draw">Draw!</string>
    <string name="text_update">Update</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_profile">Profile</string>
    <string name="text_update_or_see_your_profile">Update Or See Your Profile</string>
    <string name="text_auth_welcome">Welcome to Suiterhero</string>
    <string name="text_login_success">Login Success</string>
    <string name="text_error_login_failed">Login Failed. %s</string>
    <string name="text_error_register_failed">Register Failed. %s</string>
    <string name="text_error_email_empty">Email Should be Filled</string>
    <string name="text_error_email_invalid">Email is Invalid</string>
    <string name="text_error_password_empty">Password Should be Filled</string>
    <string name="text_error_name_empty">Name Should be Filled</string>
    <string name="text_error_name_short">Name is shorter than minimum allowed length (6)</string>
    <string name="text_register_success">Register Success</string>
    <string name="text_error_email_exist">Email is exist!</string>
    <string name="text_error_name_exist">Name is exist!</string>
    <string name="text_error_name_alphanumeric">Name should only contain alphanumeric characters</string>
    <string name="text_name">Name</string>
    <string name="text_password">Password</string>
    <string name="text_register">REGISTER</string>
    <string name="text_login">LOGIN</string>
    <string name="text_log_out">Log Out %s</string>
    <string name="text_error_name_long">Name is to long than maximum allowed length (10)</string>

</resources>